# weir

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: air_quality.py
src/weir/: __init__.py  batch.py  channel.py  errors.py  hooks.py  logging.py  metrics.py  pipeline.py  runner.py  shutdown.py  stage.py
tests/: test_weir.py
