[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weir"
version = "0.1.0"
description = "Lightweight, opinionated async data pipeline framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "Paul", email = "paul@example.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Repository = "https://github.com/paulkasay/weir"

[tool.hatch.build.targets.wheel]
packages = ["src/weir"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 10

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH", "RUF"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
